[gd_scene load_steps=6 format=3 uid="uid://bnl7nqpqlgw5v"]

[ext_resource type="Script" uid="uid://d2csh0loojr5g" path="res://Scenes/Components/GameModeSelection/game_mode.gd" id="1_t6fn3"]
[ext_resource type="FontFile" uid="uid://c0n7te484g25r" path="res://Assets/Fonts/MadimiOne-Regular.ttf" id="2_s7s27"]
[ext_resource type="Texture2D" uid="uid://cixaoueymw0bn" path="res://Assets/Images/GUID/tile_tikitiki_puzzle.png" id="2_t6fn3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s1gl4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_if33d"]
atlas = ExtResource("2_t6fn3")
region = Rect2(1483, 480, 99, 103)

[node name="GameMode" type="Control" node_paths=PackedStringArray("descriptionLabel", "panelColor", "headerColor", "difficulty_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t6fn3")
descriptionLabel = NodePath("GameModeLayer/Panel/MarginContainer/VBoxContainer/PanelContainer/Label")
panelColor = NodePath("GameModeLayer/Panel")
headerColor = NodePath("GameModeLayer/HeaderPanelColor")
difficulty_container = NodePath("GameModeLayer/Panel/MarginContainer/VBoxContainer/ScrollContainer/DifficultyContainer")

[node name="GameModeLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="GameModeLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.72549, 0.854902, 1, 0.784314)
metadata/_edit_use_anchors_ = true

[node name="HeaderPanelColor" type="Panel" parent="GameModeLayer"]
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 93.0
offset_right = 200.0
offset_bottom = 275.0
grow_horizontal = 2
theme_type_variation = &"PanelHeaderGreen"

[node name="VBoxContainer" type="VBoxContainer" parent="GameModeLayer/HeaderPanelColor"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -43.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TitleLabel" type="Label" parent="GameModeLayer/HeaderPanelColor/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_s7s27")
theme_override_font_sizes/font_size = 51
text = "common_modes"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="SubTitleLabel" type="Label" parent="GameModeLayer/HeaderPanelColor/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_s7s27")
text = "common_select_mode"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="OptionLabel" type="Label" parent="GameModeLayer/HeaderPanelColor/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.990522, 0.733629, 0.429086, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_s7s27")
text = "4 x 6"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Panel" type="PanelContainer" parent="GameModeLayer"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -318.0
offset_top = 229.0
offset_right = 318.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GameModeLayer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="GameModeLayer/Panel/MarginContainer"]
custom_minimum_size = Vector2(280, 380)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="GameModeLayer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="DifficultyContainer" type="VBoxContainer" parent="GameModeLayer/Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="GameModeLayer/Panel/MarginContainer/VBoxContainer/ScrollContainer/DifficultyContainer"]
auto_translate_mode = 1
visible = false
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
theme_type_variation = &"ButtonPurple"
text = "difficulty_learner"

[node name="HSeparator" type="HSeparator" parent="GameModeLayer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="GameModeLayer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_s1gl4")

[node name="Label" type="Label" parent="GameModeLayer/Panel/MarginContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "El modo APRENDIZ esta enfocado para que los niños aprendan formas, colores, no números de manera visual.
Cuando se selecciona un puzzle directamente te muestra la imagen y un texto relacionado con la imagen. "
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="GameModeLayer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="GameModeLayer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"ButtonRed"
toggle_mode = true
text = "Jugar"

[node name="ButtonClose" type="Button" parent="GameModeLayer"]
custom_minimum_size = Vector2(120, 120)
offset_left = 30.0
offset_top = 120.0
offset_right = 150.0
offset_bottom = 240.0
pivot_offset = Vector2(60, 60)
theme_type_variation = &"CircleButtonRed"

[node name="TextureRect" type="TextureRect" parent="GameModeLayer/ButtonClose"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_if33d")
expand_mode = 1

[connection signal="pressed" from="GameModeLayer/Panel/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="GameModeLayer/ButtonClose" to="." method="_exit_tree"]
